# toy-examples

./: .clangd  .gitignore  README.md
examples/: hello_world.cpp
examples/allocators/: CMakeLists.txt  pmr_basic.cpp  pmr_benchmark.cpp  pmr_containers.cpp  pmr_monotonic.cpp
examples/benchmarking/: CMakeLists.txt  compile_flags_impact_results.csv  docker_build.sh  docker_run.sh
examples/benchmarking/google_benchmark_basics/: 01_minimal_benchmark.cpp  02_measure_work_and_avoid_optimization.cpp  03_parameterize_input_size.cpp  04_compare_two_approaches.cpp  05_compare_numeric_types.cpp  README.md
examples/benchmarking/know_your_hardware/: DoD.cpp  cache_ben.cpp  vf.cpp
examples/benchmarking/know_your_language/: G15_Object_Oriented_Solution.cpp  G15_Procedural_Solution.cpp  G16_Cyclic_Visitor.cpp  G17_Visitor.cpp  dispatch_benchmark.cpp  dispatch_model.hpp
examples/benchmarking/know_your_tools/: compile_flags_impact.cpp
